src/cfml/parsing/cfml/antlr/CFParser.java
// $ANTLR 3.4 /Users/valliant/Projects/java/CFML/cfml.parsing/antlr/concept/CF.g 2012-02-26 00:36:19

package cfml.parsing.cfml.antlr;
import java.util.LinkedList;



import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class CFParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ASSIGN", "ATTRIBUTE", "ATTRIBUTENAME", "ATTR_EQ", "ATTR_VALUE", "CFELSETAG", "CFIFTAG", "CFMLTAG", "CFSETDATA", "CFSETTAG", "CFTAG_ID", "CLOSE_CHEVRON", "DIGIT", "DoubleStringCharacter", "ELEMENT", "GENERIC_ID", "ID", "LETTER", "NAMECHAR", "OPEN_CHEVRON", "OTHER", "PCDATA", "SINGLETAG", "STRING_LITERAL", "SingleStringCharacter", "TAG", "TAGNAME", "TAG_CLOSE", "TAG_EMPTY_CLOSE", "TAG_END_OPEN", "TAG_START_OPEN", "TRY", "WS"
    };

    public static final int EOF=-1;
    public static final int ASSIGN=4;
    public static final int ATTRIBUTE=5;
    public static final int ATTRIBUTENAME=6;
    public static final int ATTR_EQ=7;
    public static final int ATTR_VALUE=8;
    public static final int CFELSETAG=9;
    public static final int CFIFTAG=10;
    public static final int CFMLTAG=11;
    public static final int CFSETDATA=12;
    public static final int CFSETTAG=13;
    public static final int CFTAG_ID=14;
    public static final int CLOSE_CHEVRON=15;
    public static final int DIGIT=16;
    public static final int DoubleStringCharacter=17;
    public static final int ELEMENT=18;
    public static final int GENERIC_ID=19;
    public static final int ID=20;
    public static final int LETTER=21;
    public static final int NAMECHAR=22;
    public static final int OPEN_CHEVRON=23;
    public static final int OTHER=24;
    public static final int PCDATA=25;
    public static final int SINGLETAG=26;
    public static final int STRING_LITERAL=27;
    public static final int SingleStringCharacter=28;
    public static final int TAG=29;
    public static final int TAGNAME=30;
    public static final int TAG_CLOSE=31;
    public static final int TAG_EMPTY_CLOSE=32;
    public static final int TAG_END_OPEN=33;
    public static final int TAG_START_OPEN=34;
    public static final int TRY=35;
    public static final int WS=36;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators

    protected static class ElementScope_scope {
        String currentElementName;
        int closerLine;
        int closerPosInLine;
    }
    protected Stack ElementScope_stack = new Stack();



    public CFParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public CFParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return CFParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/valliant/Projects/java/CFML/cfml.parsing/antlr/concept/CF.g"; }


    public static class compilationUnit_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "compilationUnit"
    // /Users/valliant/Projects/java/CFML/cfml.parsing/antlr/concept/CF.g:185:1: compilationUnit : tag ;
    public final CFParser.compilationUnit_return compilationUnit() throws RecognitionException {
        CFParser.compilationUnit_return retval = new CFParser.compilationUnit_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        CFParser.tag_return tag1 =null;



        try {
            // /Users/valliant/Projects/java/CFML/cfml.parsing/antlr/concept/CF.g:185:17: ( tag )
            // /Users/valliant/Projects/java/CFML/cfml.parsing/antlr/concept/CF.g:185:19: tag
            {
            root_0 = (CommonTree)adaptor.nil();


            pushFollow(FOLLOW_tag_in_compilationUnit745);
            tag1=tag();

            state._fsp--;

            adaptor.addChild(root_0, tag1.getTree());

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "compilationUnit"


    public static class tag_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "tag"
    // /Users/valliant/Projects/java/CFML/cfml.parsing/antlr/concept/CF.g:187:1: tag : ( ( element )* | singleTag ( singleTag | PCDATA | element )* );
    public final CFParser.tag_return tag() throws RecognitionException {
        CFParser.tag_return retval = new CFParser.tag_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token PCDATA5=null;
        CFParser.element_return element2 =null;

        CFParser.singleTag_return singleTag3 =null;

        CFParser.singleTag_return singleTag4 =null;

        CFParser.element_return element6 =null;


        CommonTree PCDATA5_tree=null;

        try {
            // /Users/valliant/Projects/java/CFML/cfml.parsing/antlr/concept/CF.g:187:4: ( ( element )* | singleTag ( singleTag | PCDATA | element )* )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==EOF||LA3_0==TAG_START_OPEN) ) {
                alt3=1;
            }
            else if ( (LA3_0==SINGLETAG) ) {
                alt3=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;

            }
            switch (alt3) {
                case 1 :
                    // /Users/valliant/Projects/java/CFML/cfml.parsing/antlr/concept/CF.g:187:6: ( element )*
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    // /Users/valliant/Projects/java/CFML/cfml.parsing/antlr/concept/CF.g:187:6: ( element )*
                    loop1:
                    do {
                        int alt1=2;
                        int LA1_0 = input.LA(1);

                        if ( (LA1_0==TAG_START_OPEN) ) {
                            alt1=1;
                        }


                        switch (alt1) {
                    	case 1 :
                    	    // /Users/valliant/Projects/java/CFML/cfml.parsing/antlr/concept/CF.g:187:6: element
                    	    {
                    	    pushFollow(FOLLOW_element_in_tag752);
                    	    element2=element();

                    	    state._fsp--;

                    	    adaptor.addChild(root_0, element2.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop1;
                        }
                    } while (true);


                    }
                    break;
                case 2 :
                    // /Users/valliant/Projects/java/CFML/cfml.parsing/antlr/concept/CF.g:187:17: singleTag ( singleTag | PCDATA | element )*
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_singleTag_in_tag757);
                    singleTag3=singleTag();

                    state._fsp--;

                    adaptor.addChild(root_0, singleTag3.getTree());

                    // /Users/valliant/Projects/java/CFML/cfml.parsing/antlr/concept/CF.g:187:27: ( singleTag | PCDATA | element )*
                    loop2:
                    do {
                        int alt2=4;
                        switch ( input.LA(1) ) {
                        case SINGLETAG:
                            {
                            alt2=1;
                            }
                            break;
                        case PCDATA:
                            {
                            alt2=2;
                            }
                            break;
                        case TAG_START_OPEN:
                            {
                            alt2=3;
                            }
                            break;

                        }

                        switch (alt2) {
                    	case 1 :
                    	    // /Users/valliant/Projects/java/CFML/cfml.parsing/antlr/concept/CF.g:187:28: singleTag
                    	    {
                    	    pushFollow(FOLLOW_singleTag_in_tag760);
                    	    singleTag4=singleTag();

                    	    state._fsp--;

                    	    adaptor.addChild(root_0, singleTag4.getTree());

                    	    }
                    	    break;
                    	case 2 :
                    	    // /Users/valliant/Projects/java/CFML/cfml.parsing/antlr/concept/CF.g:187:38: PCDATA
                    	    {
                    	    PCDATA5=(Token)match(input,PCDATA,FOLLOW_PCDATA_in_tag762); 
                    	    PCDATA5_tree = 
                    	    (CommonTree)adaptor.create(PCDATA5)
                    	    ;
                    	    adaptor.addChild(root_0, PCDATA5_tree);


                    	    }
                    	    break;
                    	case 3 :
                    	    // /Users/valliant/Projects/java/CFML/cfml.parsing/antlr/concept/CF.g:187:45: element
                    	    {
                    	    pushFollow(FOLLOW_element_in_tag764);
                    	    element6=element();

                    	    state._fsp--;

                    	    adaptor.addChild(root_0, element6.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop2;
                        }
                    } while (true);


                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "tag"


    public static class element_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "element"
    // /Users/valliant/Projects/java/CFML/cfml.parsing/antlr/concept/CF.g:189:1: element : ( startTag ^ ( element | PCDATA )* endTag !| emptyElement );
    public final CFParser.element_return element() throws RecognitionException {
        ElementScope_stack.push(new ElementScope_scope());

        CFParser.element_return retval = new CFParser.element_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token PCDATA9=null;
        CFParser.startTag_return startTag7 =null;

        CFParser.element_return element8 =null;

        CFParser.endTag_return endTag10 =null;

        CFParser.emptyElement_return emptyElement11 =null;


        CommonTree PCDATA9_tree=null;

        try {
            // /Users/valliant/Projects/java/CFML/cfml.parsing/antlr/concept/CF.g:191:5: ( startTag ^ ( element | PCDATA )* endTag !| emptyElement )
            int alt5=2;
            alt5 = dfa5.predict(input);
            switch (alt5) {
                case 1 :
                    // /Users/valliant/Projects/java/CFML/cfml.parsing/antlr/concept/CF.g:191:9: startTag ^ ( element | PCDATA )* endTag !
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_startTag_in_element785);
                    startTag7=startTag();

                    state._fsp--;

                    root_0 = (CommonTree)adaptor.becomeRoot(startTag7.getTree(), root_0);

                    // /Users/valliant/Projects/java/CFML/cfml.parsing/antlr/concept/CF.g:192:13: ( element | PCDATA )*
                    loop4:
                    do {
                        int alt4=3;
                        int LA4_0 = input.LA(1);

                        if ( (LA4_0==TAG_START_OPEN) ) {
                            alt4=1;
                        }
                        else if ( (LA4_0==PCDATA) ) {
                            alt4=2;
                        }


                        switch (alt4) {
                    	case 1 :
                    	    // /Users/valliant/Projects/java/CFML/cfml.parsing/antlr/concept/CF.g:192:14: element
                    	    {
                    	    pushFollow(FOLLOW_element_in_element801);
                    	    element8=element();

                    	    state._fsp--;

                    	    adaptor.addChild(root_0, element8.getTree());

                    	    }
                    	    break;
                    	case 2 :
                    	    // /Users/valliant/Projects/java/CFML/cfml.parsing/antlr/concept/CF.g:193:15: PCDATA
                    	    {
                    	    PCDATA9=(Token)match(input,PCDATA,FOLLOW_PCDATA_in_element817); 
                    	    PCDATA9_tree = 
                    	    (CommonTree)adaptor.create(PCDATA9)
                    	    ;
                    	    adaptor.addChild(root_0, PCDATA9_tree);


                    	    }
                    	    break;

                    	default :
                    	    break loop4;
                        }
                    } while (true);


                    pushFollow(FOLLOW_endTag_in_element846);
                    endTag10=endTag();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // /Users/valliant/Projects/java/CFML/cfml.parsing/antlr/concept/CF.g:196:11: emptyElement
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_emptyElement_in_element859);
                    emptyElement11=emptyElement();

                    state._fsp--;

                    adaptor.addChild(root_0, emptyElement11.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
            ElementScope_stack.pop();

        }
        return retval;
    }
    // $ANTLR end "element"


    public static class startTag_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "startTag"
    // /Users/valliant/Projects/java/CFML/cfml.parsing/antlr/concept/CF.g:202:1: startTag : (name= TAG_START_OPEN ( attribute )* TAG_CLOSE -> ^( ELEMENT[$name] ( attribute )* ) ) ;
    public final CFParser.startTag_return startTag() throws RecognitionException {
        CFParser.startTag_return retval = new CFParser.startTag_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token name=null;
        Token TAG_CLOSE13=null;
        CFParser.attribute_return attribute12 =null;


        CommonTree name_tree=null;
        CommonTree TAG_CLOSE13_tree=null;
        RewriteRuleTokenStream stream_TAG_CLOSE=new RewriteRuleTokenStream(adaptor,"token TAG_CLOSE");
        RewriteRuleTokenStream stream_TAG_START_OPEN=new RewriteRuleTokenStream(adaptor,"token TAG_START_OPEN");
        RewriteRuleSubtreeStream stream_attribute=new RewriteRuleSubtreeStream(adaptor,"rule attribute");
        try {
            // /Users/valliant/Projects/java/CFML/cfml.parsing/antlr/concept/CF.g:203:5: ( (name= TAG_START_OPEN ( attribute )* TAG_CLOSE -> ^( ELEMENT[$name] ( attribute )* ) ) )
            // /Users/valliant/Projects/java/CFML/cfml.parsing/antlr/concept/CF.g:204:5: (name= TAG_START_OPEN ( attribute )* TAG_CLOSE -> ^( ELEMENT[$name] ( attribute )* ) )
            {
            // /Users/valliant/Projects/java/CFML/cfml.parsing/antlr/concept/CF.g:204:5: (name= TAG_START_OPEN ( attribute )* TAG_CLOSE -> ^( ELEMENT[$name] ( attribute )* ) )
            // /Users/valliant/Projects/java/CFML/cfml.parsing/antlr/concept/CF.g:204:6: name= TAG_START_OPEN ( attribute )* TAG_CLOSE
            {
            name=(Token)match(input,TAG_START_OPEN,FOLLOW_TAG_START_OPEN_in_startTag895);  
            stream_TAG_START_OPEN.add(name);


            // /Users/valliant/Projects/java/CFML/cfml.parsing/antlr/concept/CF.g:204:26: ( attribute )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==GENERIC_ID) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // /Users/valliant/Projects/java/CFML/cfml.parsing/antlr/concept/CF.g:204:26: attribute
            	    {
            	    pushFollow(FOLLOW_attribute_in_startTag897);
            	    attribute12=attribute();

            	    state._fsp--;

            	    stream_attribute.add(attribute12.getTree());

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);


            TAG_CLOSE13=(Token)match(input,TAG_CLOSE,FOLLOW_TAG_CLOSE_in_startTag900);  
            stream_TAG_CLOSE.add(TAG_CLOSE13);



                  ((ElementScope_scope)ElementScope_stack.peek()).currentElementName = (name!=null?name.getText():null);
                        System.out.println("current Tag:"+(name!=null?name.getText():null));
                        

            // AST REWRITE
            // elements: attribute
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 209:9: -> ^( ELEMENT[$name] ( attribute )* )
            {
                // /Users/valliant/Projects/java/CFML/cfml.parsing/antlr/concept/CF.g:209:12: ^( ELEMENT[$name] ( attribute )* )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(
                (CommonTree)adaptor.create(ELEMENT, name)
                , root_1);

                // /Users/valliant/Projects/java/CFML/cfml.parsing/antlr/concept/CF.g:209:29: ( attribute )*
                while ( stream_attribute.hasNext() ) {
                    adaptor.addChild(root_1, stream_attribute.nextTree());

                }
                stream_attribute.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "startTag"


    public static class singleTag_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "singleTag"
    // /Users/valliant/Projects/java/CFML/cfml.parsing/antlr/concept/CF.g:213:1: singleTag : (name= SINGLETAG ( attribute )* ( TAG_CLOSE | TAG_EMPTY_CLOSE ) -> ^( SINGLETAG[$name] ( attribute )* ) ) ;
    public final CFParser.singleTag_return singleTag() throws RecognitionException {
        CFParser.singleTag_return retval = new CFParser.singleTag_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token name=null;
        Token TAG_CLOSE15=null;
        Token TAG_EMPTY_CLOSE16=null;
        CFParser.attribute_return attribute14 =null;


        CommonTree name_tree=null;
        CommonTree TAG_CLOSE15_tree=null;
        CommonTree TAG_EMPTY_CLOSE16_tree=null;
        RewriteRuleTokenStream stream_SINGLETAG=new RewriteRuleTokenStream(adaptor,"token SINGLETAG");
        RewriteRuleTokenStream stream_TAG_EMPTY_CLOSE=new RewriteRuleTokenStream(adaptor,"token TAG_EMPTY_CLOSE");
        RewriteRuleTokenStream stream_TAG_CLOSE=new RewriteRuleTokenStream(adaptor,"token TAG_CLOSE");
        RewriteRuleSubtreeStream stream_attribute=new RewriteRuleSubtreeStream(adaptor,"rule attribute");
        try {
            // /Users/valliant/Projects/java/CFML/cfml.parsing/antlr/concept/CF.g:214:5: ( (name= SINGLETAG ( attribute )* ( TAG_CLOSE | TAG_EMPTY_CLOSE ) -> ^( SINGLETAG[$name] ( attribute )* ) ) )
            // /Users/valliant/Projects/java/CFML/cfml.parsing/antlr/concept/CF.g:215:5: (name= SINGLETAG ( attribute )* ( TAG_CLOSE | TAG_EMPTY_CLOSE ) -> ^( SINGLETAG[$name] ( attribute )* ) )
            {
            // /Users/valliant/Projects/java/CFML/cfml.parsing/antlr/concept/CF.g:215:5: (name= SINGLETAG ( attribute )* ( TAG_CLOSE | TAG_EMPTY_CLOSE ) -> ^( SINGLETAG[$name] ( attribute )* ) )
            // /Users/valliant/Projects/java/CFML/cfml.parsing/antlr/concept/CF.g:215:6: name= SINGLETAG ( attribute )* ( TAG_CLOSE | TAG_EMPTY_CLOSE )
            {
            name=(Token)match(input,SINGLETAG,FOLLOW_SINGLETAG_in_singleTag960);  
            stream_SINGLETAG.add(name);


            // /Users/valliant/Projects/java/CFML/cfml.parsing/antlr/concept/CF.g:215:21: ( attribute )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==GENERIC_ID) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // /Users/valliant/Projects/java/CFML/cfml.parsing/antlr/concept/CF.g:215:21: attribute
            	    {
            	    pushFollow(FOLLOW_attribute_in_singleTag962);
            	    attribute14=attribute();

            	    state._fsp--;

            	    stream_attribute.add(attribute14.getTree());

            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);


            // /Users/valliant/Projects/java/CFML/cfml.parsing/antlr/concept/CF.g:215:32: ( TAG_CLOSE | TAG_EMPTY_CLOSE )
            int alt8=2;
            int LA8_0 = input.LA(1);

            if ( (LA8_0==TAG_CLOSE) ) {
                alt8=1;
            }
            else if ( (LA8_0==TAG_EMPTY_CLOSE) ) {
                alt8=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 8, 0, input);

                throw nvae;

            }
            switch (alt8) {
                case 1 :
                    // /Users/valliant/Projects/java/CFML/cfml.parsing/antlr/concept/CF.g:215:33: TAG_CLOSE
                    {
                    TAG_CLOSE15=(Token)match(input,TAG_CLOSE,FOLLOW_TAG_CLOSE_in_singleTag966);  
                    stream_TAG_CLOSE.add(TAG_CLOSE15);


                    }
                    break;
                case 2 :
                    // /Users/valliant/Projects/java/CFML/cfml.parsing/antlr/concept/CF.g:215:44: TAG_EMPTY_CLOSE
                    {
                    TAG_EMPTY_CLOSE16=(Token)match(input,TAG_EMPTY_CLOSE,FOLLOW_TAG_EMPTY_CLOSE_in_singleTag969);  
                    stream_TAG_EMPTY_CLOSE.add(TAG_EMPTY_CLOSE16);


                    }
                    break;

            }



                        System.out.println("current single Tag:"+(name!=null?name.getText():null));
                        

            // AST REWRITE
            // elements: attribute, SINGLETAG
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 219:9: -> ^( SINGLETAG[$name] ( attribute )* )
            {
                // /Users/valliant/Projects/java/CFML/cfml.parsing/antlr/concept/CF.g:219:12: ^( SINGLETAG[$name] ( attribute )* )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(
                (CommonTree)adaptor.create(SINGLETAG, name)
                , root_1);

                // /Users/valliant/Projects/java/CFML/cfml.parsing/antlr/concept/CF.g:219:31: ( attribute )*
                while ( stream_attribute.hasNext() ) {
                    adaptor.addChild(root_1, stream_attribute.nextTree());

                }
                stream_attribute.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "singleTag"


    public static class cfifTag_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "cfifTag"
    // /Users/valliant/Projects/java/CFML/cfml.parsing/antlr/concept/CF.g:222:1: cfifTag : (name= CFIFTAG ( ID )* TAG_CLOSE ( CFELSETAG )? endTag -> ^( CFIFTAG[$name] ( CFELSETAG )? ) ) ;
    public final CFParser.cfifTag_return cfifTag() throws RecognitionException {
        CFParser.cfifTag_return retval = new CFParser.cfifTag_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token name=null;
        Token ID17=null;
        Token TAG_CLOSE18=null;
        Token CFELSETAG19=null;
        CFParser.endTag_return endTag20 =null;

